[package]
name = "rgpio"
authors = ["Thomas Bell <tom.aus@outlook.com>"]
version = "0.4.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tokio = { version = "1.51", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dotenvy = "0.15.7"
config = { version = "0.15.22", features = ["toml", "convert-case"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
built = { version = "0.8.0", features = ["chrono"] }
dashmap = "6.1"
moka = { version = "0.12.15", features = ["sync"] }
uuid = "1.23"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "git2", "semver"] }

[target.'cfg(any(target_arch = "arm", target_arch = "armv7", target_arch="aarch64"))'.dependencies]
rppal = "0.22.1"
